--- a/app/less/mobile/search-results.less
+++ b/app/less/mobile/search-results.less
@@ -1,3 +1,4 @@
+/** Flight Search */
 .filter-sorter-block {
   height: 45px;
   background: #ffffff;
@@ -106,7 +107,6 @@
     }
   }
 }
-
 .outbound-flight-selected {
   background-color: #fcaf56;
   line-height: 30px;
@@ -120,5 +120,102 @@
   .separator {
     padding: 0 5px;
     color: #dc9139;
+  }
+}
+
+/* Hotels Search */
+.hotel-search-query {
+  background-color: #eeebeb;
+  border-color: #dadada;
+  padding: 10px;
+  color: #ef9630;
+
+  .date-info,
+  .location {
+    position: relative;
+    background: #fff;
+    line-height: 44px;
+    -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 2px 3px #d8d8d8;
+    box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 2px 3px #d8d8d8;
+
+    .ico-calendar,
+    .ico-marker {
+      position: absolute;
+      left: 11px;
+      top: 13px;
+    }
+  }
+
+  .date-info {
+    width: 190px;
+    padding-left: 36px;
+  }
+
+  .location {
+    width: 98px;
+    padding-left: 30px;
+  }
+}
+
+.hotel-card {
+  padding: 10px;
+  border-bottom: 1px solid #dadada;
+
+  &:last-child {
+    border-top: 0
+  }
+
+  .hotel-picture {
+    margin: 0;
+
+    img {
+      border: 1px solid rgba(216, 216, 216, 0.5);
+      max-width: 60px;
+      width: 60px;
+      max-height: 60px;
+      height: 60px;
+    }
+  }
+
+  .hotel-meta {
+    padding: 0 10px;
+  }
+
+  .hotel-name {
+    margin-bottom: 3px
+  }
+
+  .info-extra {
+    color: #959595
+  }
+
+  .hotel-rating {
+    padding-left: 10px;
+    border-color: #959595;
+    // border-width: 2px;
+    height: 14px
+  }
+
+  .hotel-review {
+    margin-top: 7px;
+    margin-bottom: 5px;
+  }
+
+  .review-star {
+
+  }
+
+  .review-count,
+  .review-text {
+    margin-left: 5px;
+    color: #ef9630
+  }
+
+  .hotel-price {
+    color: #158ea3;
+
+    .currency {
+      margin-right: 3px;
+    }
   }
 }
