--- a/app/jade-mobile/flight-return-results.jade
+++ b/app/jade-mobile/flight-return-results.jade
@@ -21,7 +21,7 @@ block main
       span.inline Outbound Flight:&nbsp;
       span.inline.flight-number.f-bold QZ 818
       span.inline.separator |
-      a.changes-outbound-flight(href="mobile/flight-search.html") Change
+      a.changes-outbound-flight(href="mobile/flight-results.html") Change
 
     .search-criteria-block.text-center.b-b.b-t
       .trip-location.inline.f-bold.text-14px.m-t
@@ -59,7 +59,7 @@ block main
             span.price.f-bold.text-14px 900,000
             span.extra-info / person
         .clearfix
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-search.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
 
       .flight-card.pos-rlt
         figure.airline-logo.pull-left
@@ -91,7 +91,7 @@ block main
             span.extra-info / person
         .clearfix
 
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-search.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
 
       .flight-card.pos-rlt
         figure.airline-logo.pull-left
@@ -120,7 +120,7 @@ block main
             span.price.f-bold.text-14px 900,000
             span.per-person / person
         .clearfix
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-search.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
 
       .flight-card.pos-rlt
         figure.airline-logo.pull-left
@@ -150,7 +150,7 @@ block main
             span.extra-info / person
         .clearfix
 
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-search.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
 
       .flight-card.pos-rlt
         figure.airline-logo.pull-left
@@ -180,7 +180,7 @@ block main
             span.extra-info / person
         .clearfix
 
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-search.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
 
   .spinner-block
     .spinner Loading...
