--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -164,6 +164,12 @@
       &-info-circle {
         background-position: -49px 0;
       }
+
+      &-restaurant {
+        width: 10px;
+        height: 16px;
+        background-position: -103px 0;
+      }
     }
   }
 }
