--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -17,3 +17,4 @@
 @import "mobile/form-find.less";
 @import "mobile/booking.less";
 @import "mobile/search-results.less";
+@import "mobile/tour.less";
