--- a/app/jade-mobile/find-hotels.jade
+++ b/app/jade-mobile/find-hotels.jade
@@ -4,7 +4,7 @@ include includes/mixin
 
 block main
   #main-wrap.form-pencarian.pos-rlt
-    form.form-find.sapta-form(id="formFindHotels", method="GET", action="mobile/hotel-search.html")
+    form.form-find.sapta-form(id="formFindHotels", method="GET", action="mobile/hotel-results.html")
       h4.text-u-c.title-search.text-center.m-b-lg Find Hotels
         a.close(href="/mobile") Close
 
