--- a/app/less/mobile/tour.less
+++ b/app/less/mobile/tour.less
@@ -271,7 +271,7 @@
     .book-btn {
       text-align: center;
       .f-bold;
-      padding: 7px;
+      padding: 4px 7px 10px 7px;
       height: 30px;
       width: 62px;
       border: 0;
