--- a/app/jade-mobile/tour-detail.jade
+++ b/app/jade-mobile/tour-detail.jade
@@ -166,7 +166,7 @@ block main
                 span.currency.inline.m-r-xs.text-primary USD
                 span.currency.inline.m-r-xs.text-primary 3000
                 span.label / person
-              a.book-btn(href="tour-booking.html") BOOK
+              a.book-btn(href="mobile/tour-booking.html") BOOK
             li.pos-rlt
               .date-travel.f-bold.text-14px 25 Feb -15 Mar 2015
               .airline Singapore Airlines
@@ -174,7 +174,7 @@ block main
                 span.currency.inline.m-r-xs.text-primary USD
                 span.currency.inline.m-r-xs.text-primary 3000
                 span.label / person
-              a.book-btn(href="tour-booking.html") BOOK
+              a.book-btn(href="mobile/tour-booking.html") BOOK
             li.pos-rlt
               .date-travel.f-bold.text-14px 25 Feb -15 Mar 2015
               .airline Singapore Airlines
@@ -182,7 +182,7 @@ block main
                 span.currency.inline.m-r-xs.text-primary USD
                 span.currency.inline.m-r-xs.text-primary 3000
                 span.label / person
-              a.book-btn(href="tour-booking.html") BOOK
+              a.book-btn(href="mobile/tour-booking.html") BOOK
             li.pos-rlt
               .date-travel.f-bold.text-14px 25 Feb -15 Mar 2015
               .airline Singapore Airlines
@@ -190,7 +190,7 @@ block main
                 span.currency.inline.m-r-xs.text-primary USD
                 span.currency.inline.m-r-xs.text-primary 3000
                 span.label / person
-              a.book-btn(href="tour-booking.html") BOOK
+              a.book-btn(href="mobile/tour-booking.html") BOOK
             li.pos-rlt
               .date-travel.f-bold.text-14px 25 Feb -15 Mar 2015
               .airline Singapore Airlines
@@ -198,7 +198,7 @@ block main
                 span.currency.inline.m-r-xs.text-primary USD
                 span.currency.inline.m-r-xs.text-primary 3000
                 span.label / person
-              a.book-btn(href="tour-booking.html") BOOK
+              a.book-btn(href="mobile/tour-booking.html") BOOK
 
         .text-center.m-b-lg
           a.btn.btn-white.text-14px.f-bold.m-auto(href="#") What’s Included in the Price
