--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -17,4 +17,5 @@
 @import "mobile/form-find.less";
 @import "mobile/booking.less";
 @import "mobile/search-results.less";
+@import "mobile/nav-tabs.less";
 @import "mobile/tour.less";
