--- a/app/less/mobile/form-find.less
+++ b/app/less/mobile/form-find.less
@@ -15,8 +15,6 @@
 
     label {
       color: #606060;
-      font-weight: 300;
-      font-family: "Gotham Book";
       font-size: 11px;
     }
 
@@ -41,12 +39,12 @@
       background: none;
       border: none;
       margin: 7px 0 0 0;
+      padding-left: 8px;
     }
 
     textarea {
       border: none;
       font-size: 16px;
-      font-family: "Gotham Book";
       resize: none;
       width: 100%;
       height: 80px;
@@ -172,15 +170,28 @@
 
   .btn {
     text-shadow: 1px 2px 0px rgba(0, 102, 120, 1);
+
+    &.btn-white {
+      text-shadow: none
+    }
   }
 
   .btn-submit {
-    font-size: 18px;
-    font-family: "Gotham Black";
+    .f-bold;
+    display: block;
+    margin: 0 auto;
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    height: 48px;
+    background: #158ea3;
+    font-size: 14px;
     color: #fff;
-    height: 50px;
-    width: 205px;
     border-radius: 5px;
+    -webkit-box-shadow: 0px -2px 0px 0px #15a8c1;
+    box-shadow: 0px -2px 0px 0px #15a8c1;
+    border-right: 1px solid #15a8c1;
+    border-left: 1px solid #15a8c1;
 
     &.text-md {
       font-size: 14px;
