--- a/app/jade-mobile/flight-return-results.jade
+++ b/app/jade-mobile/flight-return-results.jade
@@ -59,7 +59,7 @@ block main
             span.price.f-bold.text-14px 900,000
             span.extra-info / person
         .clearfix
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-booking-1.html") BOOK
 
       .flight-card.pos-rlt
         figure.airline-logo.pull-left
@@ -91,7 +91,7 @@ block main
             span.extra-info / person
         .clearfix
 
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-booking-1.html") BOOK
 
       .flight-card.pos-rlt
         figure.airline-logo.pull-left
@@ -120,7 +120,7 @@ block main
             span.price.f-bold.text-14px 900,000
             span.per-person / person
         .clearfix
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-booking-1.html") BOOK
 
       .flight-card.pos-rlt
         figure.airline-logo.pull-left
@@ -150,7 +150,7 @@ block main
             span.extra-info / person
         .clearfix
 
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-booking-1.html") BOOK
 
       .flight-card.pos-rlt
         figure.airline-logo.pull-left
@@ -180,7 +180,7 @@ block main
             span.extra-info / person
         .clearfix
 
-        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-return-results.html") BOOK
+        a.pos-abt.book-btn-sm.btn-yellow(href="mobile/flight-booking-1.html") BOOK
 
   .spinner-block
     .spinner Loading...
