--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -19,3 +19,4 @@
 @import "mobile/search-results.less";
 @import "mobile/nav-tabs.less";
 @import "mobile/tour.less";
+@import "mobile/flight-booking.less";
