--- a/app/jade-mobile/flight-booking-1.jade
+++ b/app/jade-mobile/flight-booking-1.jade
@@ -8,7 +8,7 @@ block main
       .tour-title.f-bold.text-14px Jakarta (CGK) - Denpasar (DPS)
       a.text-orange(href='#') Detail Pemesanan
 
-    form.sapta-form(id="flightBookingStep1", method="GET", action="mobile/tour-booking-thankyou.html")
+    form.sapta-form(id="flightBookingStep1", method="GET", action="mobile/flight-booking-2.html")
 
       .flight-booking-progress.step-1
         span.current Details
