--- a/app/less/mobile/flight-booking.less
+++ b/app/less/mobile/flight-booking.less
@@ -16,6 +16,20 @@
     background: url(../img/mobile/payment-process-1.png) no-repeat bottom center;
   }
 
+  &.step-2 {
+    padding-right: 10px;
+    padding-left: 10px;
+    background: url(../img/mobile/payment-process-2.png) no-repeat bottom center;
+  }
+
+  &.step-3 {
+    background: url(../img/mobile/payment-process-3.png) no-repeat bottom center;
+  }
+
+  &.step-4 {
+    background: url(../img/mobile/payment-process-4.png) no-repeat bottom center;
+  }
+
   span {
     font-size: 14px;
     display: inline-block;
@@ -30,6 +44,11 @@
       text-align: left;
     }
 
+    &:nth-child(3) {
+      text-align: left;
+      padding-left: 15px
+    }
+
     &:last-child {
       text-align: right;
     }
@@ -37,8 +56,13 @@
 }
 
 .flight-booking-block {
+
   form {
     padding: 0 20px;
+
+    &#flightBookingStep2 {
+      padding: 0 10px;
+    }
   }
 
   .account-login {
@@ -91,5 +115,177 @@
     .b-t;
     border-color: #ddd;
   }
-}
 
+  .flight-detail-info {
+    background: #eee;
+    margin-left: -10px;
+    margin-right: -10px;
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+
+    .outbound-flight-block,
+    .inbound-flight-block {
+      padding: 10px 10px 0 10px;
+    }
+
+    ul.outbound-flight,
+    ul.inbound-flight {
+      -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+      margin-bottom:10px;
+
+      li {
+        .pos-rlt;
+        padding: 10px 20px 10px 55px;
+        background: #fff;
+        border-bottom: 1px solid #e0e0e0;
+        line-height: 30px;
+
+        &.bg-light {
+          background: #f8f8f8
+        }
+
+        &:first-child {
+          padding: 15px 0;
+          line-height: normal;
+          .f-bold;
+        }
+
+        &:last-child {
+          border-bottom: 0;
+        }
+
+        &.schedule {
+          height: 80px;
+          line-height: 18px;
+
+          .ico-departure {
+            top: 30px
+          }
+
+          .ico-return {
+            top: 26px
+          }
+        }
+
+        .ico {
+          position: absolute;
+          top: 17px;
+          left: 20px;
+
+          &-bag {
+            top: 17px;
+          }
+
+          &-adult {
+            left: 23px
+          }
+          &-marker {
+            top: 17px;
+          }
+        }
+
+        &.airline {
+          padding-left: 15px;
+          line-height: 15px;
+
+          span {
+            line-height: 27px
+          }
+        }
+
+        label {
+          color: #888;
+          font-size: 11px;
+          font-family: "Gotham Black"
+        }
+      }
+    }
+  }
+
+  .passenger-list-block {
+    margin-left: -10px;
+    margin-right: -10px;
+    padding: 5px 0;
+
+    .passenger-info {
+      padding: 10px 10px 3px 10px;
+
+      ul {
+        -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+        border-bottom: 2px solid #d8d8d8;
+        margin-bottom: 0;
+      }
+
+      li {
+        padding: 21px 0 21px 68px;
+        border-bottom: 1px solid #d8d8d8;
+
+        &:first-child {
+          .pos-rlt;
+        }
+
+        .number {
+          line-height: 32pxs;
+          font-size: 36px;
+          left: 17px;
+          top: 20px;
+          color: #d9d9d9;
+        }
+
+        label {
+          .text-u-c;
+          .f-bold;
+          color: #888;
+        }
+      }
+    }
+  }
+
+  .pricing-detail {
+    -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+    li {
+      padding: 17px 20px 17px 25px;
+      border-bottom: 1px solid #d8d8d8;
+      font-size: 14px;
+
+      &:last-child {
+        border-bottom: 0;
+        text-align: right;
+
+        label {
+          padding-right: 50px;
+        }
+
+        sup {
+          font-size: 14px
+        }
+
+        .price {
+          font-size: 24px;
+        }
+      }
+
+      span {
+        &.pull-left {
+          width: 60%;
+          text-align: left;
+        }
+        &.pull-right {
+          width: 40%;
+          text-align: right;
+          .f-bold;
+        }
+      }
+
+      label {
+        .text-u-c;
+        .f-bold;
+        margin-bottom: 3px;
+        color: #888;
+      }
+    }
+  }
+}
