--- a/app/less/mobile/helper.less
+++ b/app/less/mobile/helper.less
@@ -987,3 +987,13 @@ button {
     }
   }
 }
+
+.list-unstyled {
+  padding-left: 0;
+  list-style: none;
+}
+
+ul, ol {
+  margin-top: 0;
+  margin-bottom: 8.5px;
+}
