fixing width for progress bar flight payment

--- a/app/less/mobile/flight-booking.less
+++ b/app/less/mobile/flight-booking.less
@@ -10,7 +10,8 @@
 
 .flight-booking-progress {
   padding: 20px 0 15px 0;
-  margin-bottom: 30px;
+  width: 300px;
+  margin: 0 auto 30px auto;
 
   &.step-1 {
     background: url(../img/mobile/payment-process-1.png) no-repeat bottom center;
