flight booking step 4/5

--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -170,6 +170,24 @@
         height: 16px;
         background-position: -103px 0;
       }
+
+      &-check {
+        width: 25px;
+        height: 25px;
+        background-position: -119px -50px
+      }
+
+      &-gear {
+        width: 26px;
+        height: 26px;
+        background-position: -128px -1px
+      }
+
+      &-waiting {
+        width: 15px;
+        height: 15px;
+        background-position: -158px -1px
+      }
     }
   }
 }
