--- a/app/css/sapta-tour.mobile.css
+++ b/app/css/sapta-tour.mobile.css
@@ -78,8 +78,7 @@
 }
 .fa-spin {
   -webkit-animation: fa-spin 2s infinite linear;
-  -o-animation: fa-spin 2s infinite linear;
-     animation: fa-spin 2s infinite linear;
+  animation: fa-spin 2s infinite linear;
 }
 @-webkit-keyframes fa-spin {
   0% {
@@ -91,72 +90,52 @@
     transform: rotate(359deg);
   }
 }
-@-o-keyframes fa-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-       transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-       transform: rotate(359deg);
-  }
-}
 @keyframes fa-spin {
   0% {
     -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-       transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-       transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 .fa-rotate-90 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-     transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 .fa-rotate-180 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-     transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 .fa-rotate-270 {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
-  -o-transform: rotate(270deg);
-     transform: rotate(270deg);
+  transform: rotate(270deg);
 }
 .fa-flip-horizontal {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);
   -webkit-transform: scale(-1, 1);
   -ms-transform: scale(-1, 1);
-  -o-transform: scale(-1, 1);
-     transform: scale(-1, 1);
+  transform: scale(-1, 1);
 }
 .fa-flip-vertical {
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1);
   -webkit-transform: scale(1, -1);
   -ms-transform: scale(1, -1);
-  -o-transform: scale(1, -1);
-     transform: scale(1, -1);
+  transform: scale(1, -1);
 }
 :root .fa-rotate-90,
 :root .fa-rotate-180,
 :root .fa-rotate-270,
 :root .fa-flip-horizontal,
 :root .fa-flip-vertical {
-  -webkit-filter: none;
-          filter: none;
+  filter: none;
 }
 .fa-stack {
   position: relative;
@@ -1782,8 +1761,7 @@ figure {
 }
 hr {
   -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   height: 0;
 }
 pre {
@@ -1833,9 +1811,7 @@ input {
 }
 input[type="checkbox"],
 input[type="radio"] {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
 }
 input[type="number"]::-webkit-inner-spin-button,
@@ -1965,8 +1941,7 @@ th {
 }
 .ico-is-check {
   background: url(../img/ico-big-check.png) no-repeat 0 0;
-  -webkit-background-size: 13px 13px;
-          background-size: 13px 13px;
+  background-size: 13px 13px;
 }
 .ico-is-uncheck {
   background: url(../img/input-uncheck.png) no-repeat 0 0;
@@ -2052,6 +2027,21 @@ th {
   width: 10px;
   height: 16px;
   background-position: -103px 0;
+}
+.ico.ico-mobile.ico-check {
+  width: 25px;
+  height: 25px;
+  background-position: -119px -50px;
+}
+.ico.ico-mobile.ico-gear {
+  width: 26px;
+  height: 26px;
+  background-position: -128px -1px;
+}
+.ico.ico-mobile.ico-waiting {
+  width: 15px;
+  height: 15px;
+  background-position: -158px -1px;
 }
 .bg-white .ico,
 .bg-transparent .ico {
@@ -2336,8 +2326,7 @@ th {
   height: 21px;
   background-image: url(../img/card-american-express.png);
   background-repeat: no-repeat;
-  -webkit-background-size: 33px 21px;
-          background-size: 33px 21px;
+  background-size: 33px 21px;
 }
 .bg-white .ico-visa,
 .bg-transparent .ico-visa {
@@ -2345,8 +2334,7 @@ th {
   height: 21px;
   background-image: url(../img/card-visa.png);
   background-repeat: no-repeat;
-  -webkit-background-size: 33px 21px;
-          background-size: 33px 21px;
+  background-size: 33px 21px;
 }
 .bg-white .ico-master-card,
 .bg-transparent .ico-master-card {
@@ -2354,8 +2342,7 @@ th {
   height: 21px;
   background-image: url(../img/card-master-card.png);
   background-repeat: no-repeat;
-  -webkit-background-size: 33px 21px;
-          background-size: 33px 21px;
+  background-size: 33px 21px;
 }
 .bg-white .ico-pencil,
 .bg-transparent .ico-pencil {
@@ -2445,12 +2432,30 @@ th {
 @-webkit-keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-moz-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -2459,12 +2464,14 @@ th {
 @-o-keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -2473,12 +2480,14 @@ th {
 @keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -2492,10 +2501,17 @@ th {
 /* :not(:required) hides this rule from IE9 and below */
 .spinner:not(:required) {
   -webkit-animation: spinner 1500ms infinite linear;
+  -moz-animation: spinner 1500ms infinite linear;
+  -ms-animation: spinner 1500ms infinite linear;
   -o-animation: spinner 1500ms infinite linear;
   animation: spinner 1500ms infinite linear;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
   border-radius: 0.5em;
   -webkit-box-shadow: rgba(0, 0, 51, 0.3) 1.5em 0 0 0, rgba(0, 0, 51, 0.3) 1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) 0 1.5em 0 0, rgba(0, 0, 51, 0.3) -1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) -1.5em 0 0 0, rgba(0, 0, 51, 0.3) -1.1em -1.1em 0 0, rgba(0, 0, 51, 0.3) 0 -1.5em 0 0, rgba(0, 0, 51, 0.3) 1.1em -1.1em 0 0;
+  -moz-box-shadow: rgba(0, 0, 51, 0.3) 1.5em 0 0 0, rgba(0, 0, 51, 0.3) 1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) 0 1.5em 0 0, rgba(0, 0, 51, 0.3) -1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) -1.5em 0 0 0, rgba(0, 0, 51, 0.3) -1.1em -1.1em 0 0, rgba(0, 0, 51, 0.3) 0 -1.5em 0 0, rgba(0, 0, 51, 0.3) 1.1em -1.1em 0 0;
   box-shadow: rgba(0, 0, 51, 0.3) 1.5em 0 0 0, rgba(0, 0, 51, 0.3) 1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) 0 1.5em 0 0, rgba(0, 0, 51, 0.3) -1.1em 1.1em 0 0, rgba(0, 0, 51, 0.3) -1.5em 0 0 0, rgba(0, 0, 51, 0.3) -1.1em -1.1em 0 0, rgba(0, 0, 51, 0.3) 0 -1.5em 0 0, rgba(0, 0, 51, 0.3) 1.1em -1.1em 0 0;
   display: inline-block;
   font-size: 10px;
@@ -2541,8 +2557,7 @@ th {
   border-radius: 4px;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  -webkit-background-clip: padding-box;
-          background-clip: padding-box;
+  background-clip: padding-box;
 }
 .dropdown-menu.pull-right {
   right: 0;
@@ -3777,6 +3792,9 @@ p {
 .text-orange {
   color: #f6b44b;
 }
+.text-black {
+  color: #000;
+}
 a.text-orange {
   color: #ef9630;
 }
@@ -3841,12 +3859,10 @@ a.text-orange {
   display: inline-block !important;
 }
 .box-shadow {
-  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
-          box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
 }
 .box-shadow-none {
-  -webkit-box-shadow: none !important;
-          box-shadow: none !important;
+  box-shadow: none !important;
 }
 .wrapper-xxs {
   padding: 4px 6px;
@@ -4317,7 +4333,6 @@ button:active {
   border-radius: 3px;
   background-image: -webkit-linear-gradient(top, #f4f4f4 0%, #ffffff 100%);
   background-image: -o-linear-gradient(top, #f4f4f4 0%, #ffffff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#ffffff));
   background-image: linear-gradient(to bottom, #f4f4f4 0%, #ffffff 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff4f4f4', endColorstr='#ffffffff', GradientType=0);
@@ -4588,9 +4603,9 @@ header .menu-trigger {
   width: 50px;
   height: 50px;
   cursor: pointer;
+  -moz-transition: all 300ms;
   -webkit-transition: all 300ms;
-  -o-transition: all 300ms;
-     transition: all 300ms;
+  transition: all 300ms;
   z-index: 9999;
 }
 header .menu-trigger .ico {
@@ -5162,8 +5177,7 @@ footer a {
 }
 .btn-download-e-ticket {
   background: url(../img/btn-download-eticket.png) no-repeat 0 0;
-  -webkit-background-size: 279px 44px;
-          background-size: 279px 44px;
+  background-size: 279px 44px;
   width: 279px;
   height: 44px;
   display: inline-block;
@@ -5752,6 +5766,10 @@ footer a {
 .flight-booking-progress.step-4 {
   background: url(../img/mobile/payment-process-4.png) no-repeat bottom center;
 }
+.flight-booking-progress.step-5 {
+  margin-top: 10px;
+  background: url(../img/mobile/payment-process-4.png) no-repeat bottom center;
+}
 .flight-booking-progress span {
   font-size: 14px;
   display: inline-block;
@@ -5782,8 +5800,7 @@ footer a {
   padding: 20px 25px;
   margin-bottom: 25px;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 0px 0px 1px #e99e46, 1px 2px 3px #d8d8d8;
-          box-shadow: 0px 0px 0px 1px #e99e46, 1px 2px 3px #d8d8d8;
+  box-shadow: 0px 0px 0px 1px #e99e46, 1px 2px 3px #d8d8d8;
 }
 .flight-booking-block .account-login .btn-login,
 .flight-booking-block .account-login .btn-fb-login {
@@ -5797,15 +5814,13 @@ footer a {
   width: 60px;
   background: #fff;
   color: #000;
-  -webkit-box-shadow: 0px 0px 0px 1px #c0c0c0, 0px 1px 1px #d8d8d8;
-          box-shadow: 0px 0px 0px 1px #c0c0c0, 0px 1px 1px #d8d8d8;
+  box-shadow: 0px 0px 0px 1px #c0c0c0, 0px 1px 1px #d8d8d8;
 }
 .flight-booking-block .account-login .btn-fb-login {
   width: 155px;
   background: #5e76ac;
   color: #fff;
-  -webkit-box-shadow: 0px 0px 0px 1px #7287b6;
-          box-shadow: 0px 0px 0px 1px #7287b6;
+  box-shadow: 0px 0px 0px 1px #7287b6;
 }
 .flight-booking-block .passenger-list {
   background: #eee;
@@ -5978,5 +5993,107 @@ footer a {
   font-weight: 600;
   margin-bottom: 3px;
   color: #888;
+}
+.flight-ticket-block {
+  padding: 0 20px;
+}
+.flight-ticket-block .download-ticket-block {
+  margin-left: -20px;
+  margin-right: -20px;
+  border-color: #ddd;
+}
+.flight-ticket-block .download-ticket-block .bg-light {
+  margin: 30px 20px 20px;
+  line-height: 24px;
+  background: #f4f4f2;
+  padding: 26px 30px 26px 60px;
+  text-align: left;
+}
+.flight-ticket-block .download-ticket-block .bg-light .ico-check {
+  top: 30px;
+  left: 20px;
+}
+.flight-ticket-block .process-creating-ticket-block {
+  margin-left: -20px;
+  margin-right: -20px;
+  border-color: #ddd;
+}
+.flight-ticket-block .process-creating-ticket-block .bg-light.message {
+  margin: 30px 20px 6px;
+  line-height: 20px;
+  background: #f4f4f2;
+  padding: 25px 20px 25px 60px;
+  text-align: left;
+}
+.flight-ticket-block .process-creating-ticket-block .bg-light.message .ico-gear {
+  top: 30px;
+  left: 20px;
+}
+.flight-ticket-block .process-creating-ticket-block .bg-light.creating {
+  font-size: 13px;
+  background: #f4f4f2;
+  text-align: left;
+  margin: 0 20px 30px 20px;
+  padding: 30px 30px 30px 45px;
+}
+.flight-ticket-block .process-creating-ticket-block .bg-light.creating .duration {
+  padding-left: 25px;
+  font-size: 20px;
+  color: #158ea3;
+  margin-top: 10px;
+}
+.flight-ticket-block .process-creating-ticket-block .bg-light.creating .ico-waiting {
+  top: 58px;
+  left: 44px;
+}
+.flight-ticket-block .daftar-penumpang-block {
+  font-size: 14px;
+  margin-bottom: 25px;
+}
+.flight-ticket-block .daftar-penumpang-block .penumpang-item {
+  font-size: 13px;
+  line-height: 20px;
+  margin-bottom: 20px;
+}
+.flight-ticket-block .daftar-penumpang-block .penumpang-item .block,
+.flight-ticket-block .daftar-penumpang-block .penumpang-item span {
+  line-height: 20px;
+}
+.flight-ticket-block .info-penerbangan {
+  font-size: 14px;
+  margin-bottom: 25px;
+}
+.flight-ticket-block .info-penerbangan .outbound-flight,
+.flight-ticket-block .info-penerbangan .inbound-flight {
+  margin-bottom: 20px;
+  font-size: 13px;
+}
+.flight-ticket-block .info-penerbangan .outbound-flight > .block,
+.flight-ticket-block .info-penerbangan .inbound-flight > .block {
+  line-height: 20px;
+}
+.flight-ticket-block .informasi-pembayaran {
+  margin-left: -20px;
+  margin-right: -20px;
+  font-size: 14px;
+  border-bottom: 1px solid #ddd;
+}
+.flight-ticket-block .informasi-pembayaran > div.block {
+  font-size: 13px;
+}
+.flight-ticket-block .call-center-message {
+  padding: 25px 5px;
+  font-size: 11px;
+  color: #999;
+}
+.btn-download-ticket {
+  margin: 0 auto 30px;
+  width: 279px;
+  height: 44px;
+  background: url(../img/mobile/ico-sprite.png);
+  background-position: 0 -80px;
+  display: block;
+  text-indent: -9999px;
+  overflow: hidden;
 }
 /*# sourceMappingURL=sapta-tour.mobile.css.map */
