--- a/app/less/mobile/flight-booking.less
+++ b/app/less/mobile/flight-booking.less
@@ -31,6 +31,11 @@
     background: url(../img/mobile/payment-process-4.png) no-repeat bottom center;
   }
 
+  &.step-5 {
+    margin-top: 10px;
+    background: url(../img/mobile/payment-process-4.png) no-repeat bottom center;
+  }
+
   span {
     font-size: 14px;
     display: inline-block;
@@ -289,4 +294,125 @@
       }
     }
   }
+}
+
+
+.flight-ticket-block {
+  padding: 0 20px;
+
+  .download-ticket-block {
+    margin-left: -20px;
+    margin-right: -20px;
+    border-color: #ddd;
+
+    .bg-light {
+      margin: 30px 20px 20px;
+      line-height: 24px;
+      background: #f4f4f2;
+      padding: 26px 30px 26px 60px;
+      text-align: left;
+
+      .ico-check {
+        top: 30px;
+        left: 20px;
+      }
+    }
+  }
+
+  .process-creating-ticket-block {
+    margin-left: -20px;
+    margin-right: -20px;
+    border-color: #ddd;
+
+    .bg-light.message {
+      margin: 30px 20px 6px;
+      line-height: 20px;
+      background: #f4f4f2;
+      padding: 25px 20px 25px 60px;
+      text-align: left;
+
+      .ico-gear {
+        top: 30px;
+        left: 20px;
+      }
+    }
+
+    .bg-light.creating {
+      font-size: 13px;
+      background: #f4f4f2;
+      text-align: left;
+      margin: 0 20px 30px 20px;
+      padding: 30px 30px 30px 45px;
+
+      .duration {
+        padding-left: 25px;
+        font-size: 20px;
+        color: @brand-primary;
+        margin-top: 10px;
+      }
+
+      .ico-waiting {
+        top: 58px;
+        left: 44px;
+      }
+    }
+  }
+
+  .daftar-penumpang-block {
+    font-size: 14px;
+    margin-bottom: 25px;
+
+    .penumpang-item {
+      font-size: 13px;
+      line-height: 20px;
+      margin-bottom: 20px;
+
+      .block, span {
+        line-height: 20px
+      }
+    }
+  }
+
+  .info-penerbangan {
+    font-size: 14px;
+    margin-bottom: 25px;
+
+    .outbound-flight,
+    .inbound-flight {
+      margin-bottom: 20px;
+      font-size: 13px;
+
+      > .block {
+        line-height: 20px
+      }
+    }
+  }
+
+  .informasi-pembayaran {
+    margin-left: -20px;
+    margin-right: -20px;
+    font-size: 14px;
+    border-bottom: 1px solid #ddd;
+
+    > div.block {
+      font-size: 13px;
+    }
+  }
+
+  .call-center-message {
+    padding: 25px 5px;
+    font-size: 11px;
+    color: #999;
+  }
+}
+
+.btn-download-ticket {
+  margin: 0 auto 30px;
+  width: 279px;
+  height: 44px;
+  background: url(../img/mobile/ico-sprite.png);
+  background-position: 0 -80px;
+  display: block;
+  text-indent: -9999px;
+  overflow: hidden;
 }
